--- a/AIS_LO_System/AIS_LO_System.csproj
+++ b/AIS_LO_System/AIS_LO_System.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="6.2.3" />
+    <PackageReference Include="itext7" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
